--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimpleNote</string>
+    <string name="app_name">拾记</string>
     <string name="app_slogan">记住现在</string>
 
     <string name="cancel">取消</string>
@@ -110,5 +110,6 @@
 
     <!-- paster -->
     <string name="paster_title">纸</string>
+    <string name="paster_login_tip">登录后才能进行操作</string>
 
 </resources>
