日记存储改用数据库，greendao框架。结合rxjava封装操作工具方法。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,7 @@
     <string name="paster_title">纸</string>
     <string name="paster_login_tip">登录后才能进行操作</string>
 
+    <!-- 设置 -->
+    <string name="setting_account">（%1$s）</string>
+
 </resources>
