--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">拾记</string>
+    <string name="app_name">微记</string>
     <string name="app_slogan">记住现在</string>
 
     <string name="cancel">取消</string>
